# python-token-killer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deploy.yml  publish.yml  scorecard.yml
benchmarks/: bench.py
benchmarks/samples/: api_response.json  python_module.py  server_log.txt
docs-site/: index.md  package.json
docs-site/.vitepress/: config.js
docs-site/api/: reference.md
docs-site/guide/: getting-started.md  use-cases.md
examples/: claude_code_skill.py  clean_api_response.py  langchain_middleware.py  langgraph_agent.py  log_triage.py  rag_pipeline.py
src/ptk/: __init__.py  _base.py  _types.py
src/ptk/minimizers/: __init__.py  _code.py  _dict.py  _diff.py  _list.py  _log.py  _text.py
tests/: conftest.py  test_adversarial.py  test_ptk.py  test_real_world.py
tests/adversarial/: test_concurrency.py  test_contracts.py  test_edge_cases.py  test_mutation.py  test_performance.py  test_regex.py  test_types.py
tests/real_world/: test_infra.py  test_lint.py  test_pipelines.py  test_test_runners.py  test_vcs.py
tests/unit/: test_api.py  test_base.py  test_code.py  test_detection.py  test_dict.py  test_diff.py  test_list.py  test_log.py  test_text.py
