[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-token-killer"
version = "0.1.0"
description = "Minimize LLM tokens from Python objects — dicts, code, logs, diffs, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ptk contributors" }]
keywords = ["llm", "tokens", "compression", "agents", "langchain", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.7"]
dev = ["pytest>=8", "tiktoken>=0.7", "ruff>=0.15", "mypy>=1.20", "pre-commit>=4"]

[project.urls]
Homepage = "https://github.com/amahi2001/python-token-killer"
Repository = "https://github.com/amahi2001/python-token-killer"
Issues = "https://github.com/amahi2001/python-token-killer/issues"
Changelog = "https://github.com/amahi2001/python-token-killer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ptk"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
